# SlicerProstate

./: .gitignore  CMakeLists.txt  DWModeling.cxx  DWModeling.xml  README.md  TODO
DTRegistration/: CMakeLists.txt  DTRegistration.py
DWModeling/: CMakeLists.txt  DWModeling.cxx  DWModeling.xml
DWModeling/Data/SampledPhantoms/00943_SER18/Input/: 00943_SER18.nrrd
Data/SampledPhantoms/: README
Data/SampledPhantoms/00943_SER18/: README  probing.nrrd
Data/SampledPhantoms/00943_SER18/Input/: Fitted volume frame 5-label.nrrd
DistanceMapBasedRegistration/: CMakeLists.txt  DistanceMapBasedRegistration.py
LabelRegistration/: CMakeLists.txt  LabelRegistration.py
Logo/: SlicerProstate.ai
QuadEdgeSurfaceMesher/: CMakeLists.txt  QuadEdgeSurfaceMesher.cxx  QuadEdgeSurfaceMesher.xml
SegmentationSmoothing/: CMakeLists.txt  SegmentationSmoothing.cxx  SegmentationSmoothing.xml
SlicerProstate/: CMakeLists.txt  SlicerProstate.py
SlicerProstate/SlicerProstateUtils/: buttons.py  constants.py  decorators.py  events.py  helpers.py  metaclasses.py  mixins.py  signal.py  widgets.py
SlicerProstate/Testing/: CMakeLists.txt  SlicerProstateTests.py
SlicerProstateUtils/: CMakeLists.txt  SlicerProstateUtils.py  mixins.py
SlicerProstateUtils/SlicerProstateUtils/: decorators.py  helpers.py  mixins.py
